# git-repos

./: README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
git-repos/: __main__.py  cmds.py
git_repos/: __main__.py  cmds.py
src/git_repos/: __main__.py  cmds.py
tests/: test_main.py
