[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-repos"
version = "1.1.0"
authors = [
    { name="Gabriele Sorci", email="gabrielesorci.25@gmail.com" }
]
description = "Managment multiple git repositories"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "colorama==0.4.4"
]

[project.optional-dependencies]
tests = [
    "pytest==7.2.0"
]

[project.urls]
"Homepage" = "https://github.com/gab-25/git-repos"
"Bug Tracker" = "https://github.com/gab-25/git-repos/issues"

[project.scripts]
git-repos = "git_repos.__main__:main"
